Set setMoveResize(true) after stopping fullscreen and quick tiling

BUG: 427848


(cherry picked from commit 459aa66d8e07417a6a54bba2dda7b4fd188bd762)